--- a/riivoxml.ui
+++ b/riivoxml.ui
@@ -89,6 +89,12 @@ to apply your patch.</string>
      <height>91</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <weight>50</weight>
+     <bold>false</bold>
+    </font>
+   </property>
    <property name="readOnly">
     <bool>true</bool>
    </property>
